--- a/.dockerignore
+++ b/.dockerignore
@@ -1,26 +1,28 @@
-# Dependências
+# Ignora os módulos de node locais
 node_modules
 
-# Arquivos de log
+# Ignora os artefatos de build do Next.js
+.next
+
+# Ignora o arquivo de ambiente local para usar as variáveis do servidor
+.env
+.env.local
+
+# Ignora logs e arquivos temporários do npm
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
-# Diretório de build do Next.js
-.next
-dist
-build
+# Ignora arquivos de configuração de editores
+.vscode
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Arquivos de ambiente locais
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Outros
+# Ignora arquivos do sistema operacional
 .DS_Store
-*.pem
-*.p12
-*.crt
-*.key
-.vscode/
+Thumbs.db
