certo coloque o arquivo clicavel

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-GEMINI_API_KEY=COLE_SUA_CHAVE_GEMINI_AQUI
-NEXT_PUBLIC_SUPABASE_URL=COLE_SUA_URL_SUPABASE_AQUI
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# Cole aqui as variáveis de ambiente do seu projeto Supabase
+# Você pode encontrá-las em "Project Settings" > "API" no seu painel Supabase
+NEXT_PUBLIC_SUPABASE_URL="https://moqwrgxbvsfzsxrpvias.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="COLE_A_CHAVE_ANON_PUBLIC_AQUI"
+
+# Chave da API do Google Gemini (para funcionalidades de IA)
+# Crie em https://aistudio.google.com/app/apikey
+GEMINI_API_KEY="COLE_SUA_CHAVE_GEMINI_AQUI"
