--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "date-fns": "^3.6.0",
     "firebase": "^11.8.1",
     "genkit": "^1.8.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
@@ -56,6 +58,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
